--- a/client/src/components/Styles/Activity.module.css
+++ b/client/src/components/Styles/Activity.module.css
@@ -50,3 +50,16 @@
   height: 9px;
   background-color: #08d6f6;
 }
+
+/*media queries */
+@media screen and (max-width: 800px) {
+  .card {
+    display: grid;
+    width: 300px;
+    height: 200px;
+    grid-template-columns: 150px 150px;
+    grid-template-rows: 50px 50px 50px 50px;
+    border: 5px outset rgba(133, 94, 68, 0.945);
+    border-radius: 20px;
+  }
+}
