--- a/client/src/components/Styles/Card.module.css
+++ b/client/src/components/Styles/Card.module.css
@@ -10,7 +10,7 @@
   margin: 30px auto;
   width: 350px;
   height: 200px;
-  border-radius: 40px;
+  border-radius: 20px;
   box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
     -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
   cursor: pointer;
@@ -20,13 +20,13 @@
 .card .card_image {
   width: 350px;
   height: 150px;
-  border-radius: 40px;
+  border-radius: 20px;
 }
 
 .card .card_image img {
   width: inherit;
   height: inherit;
-  border-radius: 40px;
+  border-radius: 20px;
   object-fit: cover;
 }
 
@@ -45,4 +45,26 @@
   transform: scale(0.9, 0.9);
   box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
     -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+}
+/*for media queries do the card smaller*/
+@media screen and (max-width: 800px) {
+  .card {
+    width: 300px;
+    height: 200px;
+  }
+  .card .card_image {
+    width: 300px;
+    height: 150px;
+  }
+  .card .card_image img {
+    width: inherit;
+    height: inherit;
+    border-radius: 20px;
+    object-fit: cover;
+  }
+  .card .card_title {
+    font-size: 15px;
+    margin-top: -10px;
+    height: 30px;
+  }
 }
