--- a/client/src/components/Styles/Create.module.css
+++ b/client/src/components/Styles/Create.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -39,11 +39,11 @@
   font-size: 22px;
 }
 .form select {
-  width: 80%;
+  width: 94%;
   border-radius: 7px;
   background-color: #f2f2f2;
   font-size: 18px;
-  padding: 7px 12px;
+  padding: 4px 12px;
   border: 3px solid #04aa6d;
 }
 .form select:focus {
@@ -81,4 +81,22 @@
 .container h2 {
   color: #04aa6d;
   font-family: "Great Vibes", cursive;
+}
+
+/*for media queries*/
+@media screen and (max-width: 1040px) {
+  .container {
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    overflow: scroll;
+  }
+  .form {
+    width: 80%;
+  }
+  .countries {
+    margin-right: 0;
+  }
 }
