--- a/client/src/components/Styles/Detail.module.css
+++ b/client/src/components/Styles/Detail.module.css
@@ -1,6 +1,6 @@
 .card {
   margin: 30px auto;
-  width: 1177px;
+  width: 1020px;
   height: 500px;
   border-radius: 20px;
   box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
@@ -12,7 +12,7 @@
 }
 
 .card .card_image {
-  width: 777px;
+  width: 727px;
   height: 500px;
   border-radius: 20px;
   border: 1px solid rgba(8, 31, 46, 0.75);
@@ -41,10 +41,48 @@
   z-index: 0;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .no_activities {
   font-size: xx-large;
   margin-top: 40px;
+}
+.title_queries {
+  visibility: hidden;
+}
+/*media queries*/
+@media screen and (max-width: 1020px) {
+  .card {
+    width: 80%;
+    display: block;
+    height: 300px;
+  }
+  .card .card_image {
+    width: 100%;
+    height: 300px;
+  }
+  .card .card_image img {
+    width: 100%;
+  }
+  .card .description {
+    visibility: hidden;
+  }
+  .title_queries {
+    visibility: visible;
+  }
+  .activities_list {
+    z-index: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .no_activities {
+    font-size: xx-large;
+    margin-top: 40px;
+  }
 }
