--- a/client/src/components/Styles/Home.module.css
+++ b/client/src/components/Styles/Home.module.css
@@ -30,3 +30,11 @@ h1 {
   margin-top: 300px;
   margin-bottom: 300px;
 }
+
+/*media queries*/
+@media screen and (max-width: 800px) {
+  .btns {
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+}
