--- a/client/src/components/Styles/LandingPage.module.css
+++ b/client/src/components/Styles/LandingPage.module.css
@@ -4,8 +4,88 @@
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Courier New", Courier, monospace;
+  overflow: hidden;
 }
-.plane {
+/*background color  with  opacity*/
+.button {
+  background-color: rgba(255, 255, 255, 0.5);
+  line-height: 50px;
+  height: 72px;
+  text-align: center;
+  width: 700px;
+  cursor: pointer;
+  color: rgb(31, 27, 27);
+  transition: all 0.3s;
+  position: relative;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.button:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+/* The letter bigger and bolder*/
+.button span {
+  transition: all 0.3s;
+  font-size: 4em;
+  font-weight: bolder;
+}
+.button::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border-top-width: 3px;
+  border-bottom-width: 3px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: rgba(31, 27, 27, 0.7);
+  border-bottom-color: rgba(31, 27, 27, 0.7);
+  transform: scale(0.1, 1);
+}
+.button:hover span {
+  letter-spacing: 2px;
+}
+.button:hover::before {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+.button::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.3s;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.button:hover::after {
+  opacity: 0;
+  transform: scale(1, 1);
+}
+/*for media  queries do  the  buton with more height*/
+@media (max-width: 768px) {
+  .button {
+    width: 100%;
+    height: 100px;
+  }
+  .button span {
+    font-size: 2em;
+  }
+}
+/* .plane {
   position: absolute;
   top: 370px;
   left: -400px;
@@ -27,7 +107,7 @@
   100% {
     left: 800px;
   }
-}
+} */
 /* @keyframes plane {
   from {
     rigth: 300px;
