--- a/client/src/components/Styles/Card.module.css
+++ b/client/src/components/Styles/Card.module.css
@@ -46,6 +46,18 @@
   box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
     -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
 }
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 72vh;
+}
+.loading h3 {
+  margin-left: 1rem;
+  font-size: 2rem;
+  color: #04aa6d;
+}
 /*for media queries do the card smaller*/
 @media screen and (max-width: 800px) {
   .card {
